ci(circleci): change executor to large
Signed-off-by: slonka <slonka@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -126,7 +126,7 @@ commands:
             exit 0
 executors:
   golang:
-    resource_class: xlarge
+    resource_class: large
     docker:
       - image: "cimg/go:<< pipeline.parameters.go_version >>"
     environment:
